<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.sumberrejeki.webviewadam.SurveyDuaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_marginBottom="50dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/survey02"/>

    <TextView
        android:id="@+id/under13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/gradient"
        android:gravity="center"
        android:text="@string/under13"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:text="Under 13 Years" />

    <TextView
        android:id="@+id/olderthan13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/gradient"
        android:gravity="center"
        android:text="@string/olderthan13"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:text="Older than 13 years" />

    </LinearLayout>

    <com.google.android.gms.ads.AdView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView_banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id01"
        android:layout_marginTop="10dp">
    </com.google.android.gms.ads.AdView>

</LinearLayout>
