<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.sumberrejeki.webviewadam.WelcomingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="25dp"
            android:src="@drawable/splashscreen" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="WELCOME TO"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:text="@string/app_name"
            android:textSize="25sp"
            android:textStyle="bold" />



        <TextView
            android:id="@+id/nextwelcoming"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/gradient"
            android:gravity="center"
            android:text="@string/startwelcoming"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:text="START" />

    </LinearLayout>

    <com.google.android.gms.ads.AdView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView_banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id01"
        android:layout_marginTop="10dp">
    </com.google.android.gms.ads.AdView>


</LinearLayout>
